# sbfc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: main.yml
example/: demo.py  funcs.json  group_confounds.tsv  group_contrast.tsv  group_design.tsv
sbfc/: model.py  parser.py
sbfc/tests/: test_sbfc.py
tests/: test_sbfc.py
