[tool.poetry]
name = "sbfc"
version = "0.1.0"
description = "Seed-based functional connectivity with Nilearn"
authors = ["Hao-Ting Wang <htwangtw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nilearn = "^0.7.1"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
^/(
  (
      \.eggs
    | \.git*
    | \.datalad
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | setup.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
