[tool.poetry]
name = "sbfc"
version = "0.4.1"
description = "Seed-based functional connectivity with Nilearn"
authors = ["Hao-Ting Wang <htwangtw@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/htwangtw/sbfc"
repository = "https://github.com/htwangtw/sbfc"
keywords = ["fmri", "data-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.7"
nilearn = "^0.7.1"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
black = "^21.4b2"
flake8 = "^3.9.1"
isort = "^5.8.0"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
^/(
  (
      \.eggs
    | \.git*
    | \.datalad
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | setup.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
